maintainIT2/src/objects/Storeroom__c.object
<CustomObject>
    <description>MRO Parts Storeroom</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that owns the Storeroom</description>
        <inlineHelpText>Account that owns the Storeroom</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Storerooms</relationshipLabel>
        <relationshipName>Storerooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Buyer_Active__c</fullName>
        <description>If the Default Buyer is &quot;Active&quot;, then the record owner for the Purchase Requisition created through the Batch APEX schedule for automatic replenishment will be changed to the Default Buyer.  Otherwise, the record owner will remain the User that scheduled the Batch APEX (usually the System Admin).</description>
        <formula>Default_Buyer__r.IsActive</formula>
        <inlineHelpText>If the Default Buyer is &quot;Active&quot;, then the record owner for the Purchase Requisition created through the Batch APEX schedule for automatic replenishment will be changed to the Default Buyer.</inlineHelpText>
        <label>Default Buyer Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default Buyer (Automatically assigned on the Purchase Order when record is generated thru the automatic replenishment APEX logic).</description>
        <inlineHelpText>Default Buyer (Automatically assigned on the Purchase Order when record is generated thru the automatic replenishment APEX logic).</inlineHelpText>
        <label>Default Buyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Storerooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Parts Storeroom Description</description>
        <inlineHelpText>Parts Storeroom Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Balance_Sheet_Acct__c</fullName>
        <description>Inventory Balance Sheet Account for Part Valuations</description>
        <inlineHelpText>Inventory Balance Sheet Account for Part Valuations</inlineHelpText>
        <label>Inventory Balance Sheet Acct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Write_Off_Account__c</fullName>
        <description>Inventory Write Off Account</description>
        <inlineHelpText>Inventory Write Off Account</inlineHelpText>
        <label>Inventory Write Off Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Province</description>
        <inlineHelpText>State/Province</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storeroom_Status__c</fullName>
        <description>Storeroom Status</description>
        <inlineHelpText>Storeroom Status</inlineHelpText>
        <label>Storeroom Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street Address</description>
        <inlineHelpText>Street Address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip / Postal Code</description>
        <inlineHelpText>Zip / Postal Code</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Storeroom</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Storeroom ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storerooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>